While cycle set

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
         <title>Campo Minato</title>
     </head>
     <body>
-        <button id="grid-generator">Genera Griglia</button>
-        <div class="grid">
+        <div class="container">
+            <button id="grid-generator">Gioca</button>
+            <div class="grid">
             
+            </div>
         </div>
+        
 
         <!--js-->
         <script src="js/scripts.js"></script>
